--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </head>
 <body>
 
+    <form>
+        <input type="text" placeholder="Search">
+        <button>Search</button>
+    </form>
+
+    <ul></ul>
+
     <svg width="960" height="600"></svg>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
